--- a/.mci.yml
+++ b/.mci.yml
@@ -16,9 +16,9 @@ cxx_driver_variables:
 ## Common download urls (merge in as hashes)
   mongo_download_urls:
     ubuntu1404: &mongo_url_ubuntu1404
-      mongo_url: "http://downloads.10gen.com/linux/mongodb-linux-x86_64-enterprise-ubuntu1404-2.6.4.tgz"
+      mongo_url: "http://downloads.10gen.com/linux/mongodb-linux-x86_64-enterprise-ubuntu1404-2.6.5.tgz"
     windows64-bit: &mongo_url_windows64
-      mongo_url: "http://downloads.10gen.com/win32/mongodb-win32-x86_64-enterprise-windows-64-2.6.4.zip"
+      mongo_url: "http://downloads.10gen.com/win32/mongodb-win32-x86_64-enterprise-windows-64-2.6.5.zip"
     rhel55: &mongo_url_rhel55
       mongo_url: "http://downloads.mongodb.org/linux/mongodb-linux-x86_64-rhel55-latest.tgz"
     rhel55: &mongo_url_rhel55_32
@@ -228,8 +228,10 @@ tasks:
             working_dir: "mongo-cxx-driver"
             script: |
               set -o verbose
-              echo "Starting mongod..."
-              ./mongod${extension} ${mongodb_args}
+              echo "{ \"releases\": { \"default\": \"`pwd`\" }, \"last_updated\": \"2014-08-29 20:57:00.000000\" }" > orchestration.config
+              cat orchestration.config
+              echo "Starting mongo-orchestration..."
+              mongo-orchestration -f orchestration.config -e default start
               ${scons|scons} ${scons_flags} ${warning_flags} ${compile_flags} ${toolchain_flags} ${extrapath} ${dllpath} ${cpppath} ${libpath} integration
               exit_code=$?
               ${killall_mci|pkill mongo; pkill -9 mongod; pkill -9 mongos; pkill -f buildlogger.py; pkill -f smoke.py} || true
@@ -246,8 +248,9 @@ tasks:
             working_dir: "mongo-cxx-driver"
             script: |
               set -o verbose
-              echo "Starting mongod..."
-              ./mongod${extension} ${mongodb_args}
+              echo "{ \"releases\": { \"default\": `pwd` } }" > orchestration.config
+              echo "Starting mongo-orchestration..."
+              mongo-orchestration -f orchestration.config -e default start
               ${scons|scons} ${scons_flags} ${warning_flags} ${compile_flags} ${toolchain_flags} ${extrapath} ${dllpath} ${cpppath} ${libpath} install # static lib install step
               install_exit=$?
               ${scons|scons} ${scons_flags} ${warning_flags} ${compile_flags} ${toolchain_flags} ${extrapath} ${dllpath} ${cpppath} ${libpath} check-install # static build installation header check
